# Kurumi

./: .env.def  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  global.d.ts  next.config.js  next.config.mjs  package.json  prettier.config.cjs  tsconfig.json  tsconfig.server.json
apps/api/: .gitignore  Cargo.toml  package.json
apps/api/src/: helpers.rs  main.rs  store.rs  types.rs  websocket.rs
apps/api/src/middlewares/: cors.rs  guard.rs  logger.rs  mod.rs
apps/api/src/routes/: login.rs  mod.rs  notes.rs  register.rs  user.rs  websocket.rs
apps/desktop/: package.json  prettier.config.cjs  tsconfig.json  vite.config.ts
apps/desktop/src/: env.ts  index.tsx  router.tsx
apps/desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
apps/web/: package.json  tailwind.config.js
prisma/: schema.prisma
src/: env.mjs  socketEvents.ts  theme.ts
src/components/: EditableControls.tsx  NoteTitel.tsx  NoteTitle.tsx  PageSpinner.tsx  editor.tsx  errorBox.tsx  excalidraw.tsx  monaco.tsx  navTitle.tsx  navbar.tsx  noteBox.tsx  oAuthButtonGroup.tsx  onlyAuthenticated.tsx  show.tsx  socket.tsx
src/database/: connect.ts
src/database/models/: Note.ts
src/env/: schema.mjs
src/helpers/: debouce.ts
src/hooks/: useBoolean.ts  useWebsocket.ts  useWebsocketEvent.ts
src/pages/: [noteId].tsx  _app.tsx  _document.tsx  index.tsx  login.tsx
src/server/: devServer.ts  server.dev.ts  server.ts  websocket.ts
src/styles/: globals.css
src/types/: websocket.events.ts
src/utils/: debouce.ts  trpc.ts
(+31 files in other folders)
